
v2.0.3
-------------------
! some after-fixes for the last "big run" include imdb methods plotoutline(),
  runtime_all()
! same for imdb_person::name()
* imdb::plotoutline() was taken from storyline with the recent changes - fixed it up
+ but since we had a working storyline, that method was added as storyline()
! imdb::mainPictures() was also broken by the last site changes - fixed

v2.0.2 (10.10.2010)
-------------------
! imdbsearch: some search results missed the year (if it was consisting of more than a plain
  year, e.g. something like "2001/II")
! imdb::prodNotes: lastUpdate was broken due to a site change
+ movies: added imdb::locations() to retrieve details on the filming locations.
  pilot::locations() is just a wrapper to this requiring full fallback configured.
! mpaa_reason returned wrong text (tnx to dblume for report and fix!)
+ added method is_serial() to the movie classes to determine whether the selected
  entry is part of a TV series
! again site changes at IMDB - fixed imdb::title_year(), imdb::thumbphoto(), and
  imdb::country() with code sent by moonface (tnx!)
! imdb::languages() (and thus imdb::language() as well) had been broken - fixed.
+ added config option to set up the user agent "manually"
! if an actor had a too long movie list, no results where shown (there seems to be
  a limitation in preg_match)
! HUGE SITE CHANGES ON IMDB! Thanks to your contributions, we got many stuff fixed
  in the imdb class: thumbphoto, ratevote, genres, cast, alsoknown, runtime_all,
  comment, comment_split, tagline, plotoutline, keywords, mpaa, mpaa_hist, mpaa_reason, prodNotes
! Same reason broke the imdb_person class almost completely.


v2.0.1 (23.05.2010)
-------------------
* imdb::awards() updated with code from its author (tnx, Qvist!)
* imdb::alsoknow() updated with patch from Qvist (tnx again!)
! imdb::tagline() and imdb::prodNotes() have been affected by some site changes
! fixing some minor typos